--- a/TodoListBot/TodoListBot.csproj
+++ b/TodoListBot/TodoListBot.csproj
@@ -117,7 +117,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\IntentEnum.cs" />
+    <Compile Include="Models\Todo.cs" />
+    <Compile Include="Models\UserTodoList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\UserTodoListRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
